fixed an issue of the project's title text not being centered, when on mobile

--- a/src/style/portfolio/portfolio-phone.scss
+++ b/src/style/portfolio/portfolio-phone.scss
@@ -11,6 +11,10 @@
 		div.text {
 			margin: 0;
 			text-align: center;
+
+			h3 {
+				text-align: center;
+			}
 		}
 	}
 }
